hyprland: switch to the dwindle layout
I think this is a more comfortable and useful layout than the master
layout. But time and experience with it will tell.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -28,6 +28,9 @@ env = SSH_AUTH_SOCK, $XDG_RUNTIME_DIR/gcr/ssh
 exec-once = goldendict --group-name Main --popup-group-name Popup
 env = GOLDENDICT_FORCE_WAYLAND, 1
 
+# Launch a terminal on the scratchpad.
+exec-once = kitty --title scratchpad
+
 env = XCURSOR_THEME,            Nordzy-cursors-white
 env = XCURSOR_SIZE,             24
 env = HYPRCURSOR_THEME,         Nordzy-cursors-white
@@ -62,10 +65,8 @@ general {
     resize_on_border    = true
     col.active_border   = rgba(268bd2ff)
     col.inactive_border = rgba(93a1a1ff)
-    layout              = master
 
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
-    allow_tearing       = false
+    layout              = dwindle
 }
 
 decoration {
@@ -113,11 +114,8 @@ animations {
 }
 
 dwindle {
-    # Master switch for pseudotiling. Enabling is bound to mainMod + P in the
-    # keybinds section below
     pseudotile          = true
-    preserve_split      = true  # You probably want this
-    force_split         = 2     # Always split on the right
+    preserve_split      = true
 }
 
 master {
@@ -183,69 +181,89 @@ windowrulev2    = workspace 3, class:^(obsidian)$
 # KEYBINDINGS
 #
 
-# App launching
-bind = Super,                   Space,          exec, wofi --show drun
-bind = Super+Ctrl,              Return,         exec, kitty
-bind = Super,                   B,              exec, firefox
-bind = Super,                   mouse:275,      exec, firefox
-bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste -n -p)
-bind = Super,                   E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
-bind = Super,                   mouse:274,      exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
-bind = Super+Ctrl,              E,              exec, emacs
-bind = Super,                   O,              exec, obsidian
-bind = Super+Ctrl,              S,              exec, hyprshot -m window
-bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
+# Dwindle layout.
+bind = Super,           T,      pseudo,      # toggle pseudotile
+bind = Super,           V,      togglesplit, # toggle split direction (vertical/horizontal)
 
-# Window management
 bind = Super,           F,              fullscreen, 0 toggle
-bind = Super,           P,              pin
 bind = Super+Shift,     Space,          togglefloating
 bind = Super,           mouse:272,      togglefloating
 bind = Super,           W,              killactive
 bind = Super,           mouse:273,      killactive
+bind = Super,           P,              pin
 
-bind = Super,           Return, layoutmsg, swapwithmaster master
-bind = Super,           E,      layoutmsg, cycleprev
-bind = Super,           I,      layoutmsg, cyclenext
-bind = Super+Shift,     E,      layoutmsg, swapprev
-bind = Super+Shift,     I,      layoutmsg, swapnext
-bind = Super+Shift,     R,      layoutmsg, addmaster
-bind = Super+Shift,     D,      layoutmsg, removemaster
+# Window management
+bind = Super,           A,      movefocus, l
+bind = Super,           E,      movefocus, u
+bind = Super,           I,      movefocus, d
+bind = Super,           H,      movefocus, r
+
+bind = Super+Shift,     A,      swapwindow, l
+bind = Super+Shift,     E,      swapwindow, u
+bind = Super+Shift,     I,      swapwindow, d
+bind = Super+Shift,     H,      swapwindow, r
 
 # Window resizing
-binde = Super+Shift,    left,  resizeactive, -20   0
-binde = Super+Shift,    right, resizeactive,  20   0
-binde = Super+Shift,    up,    resizeactive,   0 -20
-binde = Super+Shift,    down,  resizeactive,   0  20
+binde = Super+Ctrl,     A,      resizeactive, -20   0
+binde = Super+Ctrl,     E,      resizeactive,   0 -20
+binde = Super+Ctrl,     I,      resizeactive,   0  20
+binde = Super+Ctrl,     H,      resizeactive,  20   0
 
-bindm = Super,          mouse:272, movewindow
-bindm = Super,          mouse:273, resizewindow
+bindm = Super,          mouse:272,      movewindow
+bindm = Super,          mouse:273,      resizewindow
 
 # Workspaces
-bind = Super,  H,  workspace, +1
-bind = Super,  A,  workspace, -1
-bind = Super,  1,  workspace,  1
-bind = Super,  2,  workspace,  2
-bind = Super,  3,  workspace,  3
-bind = Super,  4,  workspace,  4
-bind = Super,  5,  workspace,  5
-bind = Super,  6,  workspace,  6
-bind = Super,  7,  workspace,  7
-bind = Super,  8,  workspace,  8
-bind = Super,  9,  workspace,  9
-bind = Super, Tab, workspace, previous
+bind = Super,   K,              workspace, +1
+bind = Super,   U,              workspace, -1
+bind = Super,   mouse_up,       workspace, +1
+bind = Super,   mouse_down,     workspace, -1
+bind = Super,   1,              workspace,  1
+bind = Super,   2,              workspace,  2
+bind = Super,   3,              workspace,  3
+bind = Super,   4,              workspace,  4
+bind = Super,   5,              workspace,  5
+bind = Super,   6,              workspace,  6
+bind = Super,   7,              workspace,  7
+bind = Super,   8,              workspace,  8
+bind = Super,   9,              workspace,  9
+bind = Super,   Tab,            workspace, previous
 
-bind = Super+Shift,  H, movetoworkspace, +1
-bind = Super+Shift,  A, movetoworkspace, -1
-bind = Super+Shift,  1, movetoworkspace,  1
-bind = Super+Shift,  2, movetoworkspace,  2
-bind = Super+Shift,  3, movetoworkspace,  3
-bind = Super+Shift,  4, movetoworkspace,  4
-bind = Super+Shift,  5, movetoworkspace,  5
-bind = Super+Shift,  6, movetoworkspace,  6
-bind = Super+Shift,  7, movetoworkspace,  7
-bind = Super+Shift,  8, movetoworkspace,  8
-bind = Super+Shift,  9, movetoworkspace,  9
+bind = Super+Shift,     K,      movetoworkspace, +1
+bind = Super+Shift,     U,      movetoworkspace, -1
+bind = Super+Shift,     1,      movetoworkspace,  1
+bind = Super+Shift,     2,      movetoworkspace,  2
+bind = Super+Shift,     3,      movetoworkspace,  3
+bind = Super+Shift,     4,      movetoworkspace,  4
+bind = Super+Shift,     5,      movetoworkspace,  5
+bind = Super+Shift,     6,      movetoworkspace,  6
+bind = Super+Shift,     7,      movetoworkspace,  7
+bind = Super+Shift,     8,      movetoworkspace,  8
+bind = Super+Shift,     9,      movetoworkspace,  9
 
-# Application-specific animation
-layerrule = noanim, walker
+# Scratchpad
+#
+# Toggle the scratchpad.
+bind = Super,           S,      togglespecialworkspace, magic
+# Launch the special terminal if it's not already running.
+bind = Super+Ctrl,      T,      exec, kitty --title scratchpad
+
+# Move a terminal with the class "scratchpad" to the special workspace. The
+# "magic" tag corresponds to the keybinding above.
+windowrulev2    = workspace special:magic,      class:^(kitty)$, title:^(scratchpad)$
+# Resize and float the scratchpad when it appears.
+windowrulev2    = float,                        class:^(kitty)$, title:^(scratchpad)$
+windowrulev2    = size 50% 50%,                 class:^(kitty)$, title:^(scratchpad)$
+windowrulev2    = center,                       class:^(kitty)$, title:^(scratchpad)$
+
+# App launching
+bind = Super,                   Space,          exec, wofi --show drun
+bind = Super,                   Return,         exec, kitty
+bind = Super,                   B,              exec, firefox
+bind = Super,                   mouse:275,      exec, firefox
+bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste -n -p)
+# bind = Super,                   E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
+# bind = Super,                   mouse:274,      exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
+# bind = Super+Ctrl,              E,              exec, emacs
+# bind = Super,                   O,              exec, obsidian
+bind = Super+Ctrl,              S,              exec, hyprshot -m window
+bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
