hyprland: remove a couple of redundant keybindings
Also reorganise the keybindings section of the file to make it a bit
more logical.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -167,56 +167,17 @@ device {
 # See https://wiki.hypr.land/Configuring/Gestures
 gesture         = 3, horizontal, workspace
 
-# Window rules for applications
-windowrulev2    = suppressevent maximize, class:.*
-
-# GoldenDict popup - float and centre (title without hyphen)
-windowrulev2    = float,        class:.*goldendict_ng$, title:.* - GoldenDict-ng$
-windowrulev2    = center,       class:.*goldendict_ng$, title:.* - GoldenDict-ng$
-windowrulev2    = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
-
-windowrulev2    = workspace 3, class:^(obsidian)$
-
 #
 # KEYBINDINGS
 #
 
-# Dwindle layout.
-bind = Super,           T,      pseudo,      # toggle pseudotile
-bind = Super,           V,      togglesplit, # toggle split direction (vertical/horizontal)
+# Window focus.
+bind = Super,   A,      movefocus, l
+bind = Super,   E,      movefocus, u
+bind = Super,   I,      movefocus, d
+bind = Super,   H,      movefocus, r
 
-bind = Super,           F,              fullscreen, 0 toggle
-bind = Super+Shift,     Space,          togglefloating
-bind = Super,           mouse:272,      togglefloating
-bind = Super,           W,              killactive
-bind = Super,           mouse:273,      killactive
-bind = Super,           P,              pin
-
-# Window management
-bind = Super,           A,      movefocus, l
-bind = Super,           E,      movefocus, u
-bind = Super,           I,      movefocus, d
-bind = Super,           H,      movefocus, r
-
-bind = Super+Shift,     A,      swapwindow, l
-bind = Super+Shift,     E,      swapwindow, u
-bind = Super+Shift,     I,      swapwindow, d
-bind = Super+Shift,     H,      swapwindow, r
-
-# Window resizing
-binde = Super+Ctrl,     A,      resizeactive, -20   0
-binde = Super+Ctrl,     E,      resizeactive,   0 -20
-binde = Super+Ctrl,     I,      resizeactive,   0  20
-binde = Super+Ctrl,     H,      resizeactive,  20   0
-
-bindm = Super,          mouse:272,      movewindow
-bindm = Super,          mouse:273,      resizewindow
-
-# Workspaces
-bind = Super,   K,              workspace, +1
-bind = Super,   U,              workspace, -1
-bind = Super,   mouse_up,       workspace, +1
-bind = Super,   mouse_down,     workspace, -1
+# Workspaces.
 bind = Super,   1,              workspace,  1
 bind = Super,   2,              workspace,  2
 bind = Super,   3,              workspace,  3
@@ -226,10 +187,20 @@ bind = Super,   6,              workspace,  6
 bind = Super,   7,              workspace,  7
 bind = Super,   8,              workspace,  8
 bind = Super,   9,              workspace,  9
+bind = Super,   K,              workspace, +1
+bind = Super,   U,              workspace, -1
 bind = Super,   Tab,            workspace, previous
+bind = Super,   mouse_up,       workspace, +1
+bind = Super,   mouse_down,     workspace, -1
 
-bind = Super+Shift,     K,      movetoworkspace, +1
-bind = Super+Shift,     U,      movetoworkspace, -1
+# Window movement.
+bind    = Super+Shift,  A,              swapwindow, l
+bind    = Super+Shift,  E,              swapwindow, u
+bind    = Super+Shift,  I,              swapwindow, d
+bind    = Super+Shift,  H,              swapwindow, r
+bindm   = Super,        mouse:272,      movewindow
+
+# Move to workspace.
 bind = Super+Shift,     1,      movetoworkspace,  1
 bind = Super+Shift,     2,      movetoworkspace,  2
 bind = Super+Shift,     3,      movetoworkspace,  3
@@ -239,13 +210,52 @@ bind = Super+Shift,     6,      movetoworkspace,  6
 bind = Super+Shift,     7,      movetoworkspace,  7
 bind = Super+Shift,     8,      movetoworkspace,  8
 bind = Super+Shift,     9,      movetoworkspace,  9
+bind = Super+Shift,     K,      movetoworkspace, +1
+bind = Super+Shift,     U,      movetoworkspace, -1
 
-# Scratchpad
-#
-# Toggle the scratchpad.
+# Applications.
+bind = Super,                   Space,          exec, wofi --show drun
+bind = Super,                   Return,         exec, kitty
+bind = Super,                   B,              exec, firefox
+bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste --primary --no-newline)
+# bind = Super,                   E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
+# bind = Super,                   mouse:274,      exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
+# bind = Super+Ctrl,              E,              exec, emacs
+bind = Super+Ctrl,              S,              exec, hyprshot -m window
+bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
+
+# Window resizing.
+binde = Super+Ctrl,     A,              resizeactive, -20   0
+binde = Super+Ctrl,     E,              resizeactive,   0 -20
+binde = Super+Ctrl,     I,              resizeactive,   0  20
+binde = Super+Ctrl,     H,              resizeactive,  20   0
+bindm = Super,          mouse:273,      resizewindow
+
+# layout (Dwindle).
+bind = Super,           F,              fullscreen, 0 toggle
+bind = Super+Shift,     Space,          togglefloating
+bind = Super,           mouse:272,      togglefloating
+bind = Super,           W,              killactive
+bind = Super,           mouse:273,      killactive
+bind = Super,           T,              pseudo,
+bind = Super,           V,              togglesplit,
+bind = Super,           P,              pin
+
+# Scratchpad.
 bind = Super,           S,      togglespecialworkspace, magic
-# Launch the special terminal if it's not already running.
 bind = Super+Ctrl,      T,      exec, kitty --title scratchpad
+
+#
+# WINDOW RULES
+#
+windowrulev2    = suppressevent maximize, class:.*
+
+windowrulev2    = workspace 3, class:^(obsidian)$
+
+# GoldenDict popup: float and centre.
+windowrulev2    = float,        class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrulev2    = center,       class:.*goldendict_ng$, title:.* - GoldenDict-ng$
+windowrulev2    = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng$
 
 # Move a terminal with the class "scratchpad" to the special workspace. The
 # "magic" tag corresponds to the keybinding above.
@@ -254,16 +264,3 @@ windowrulev2    = workspace special:magic,      class:^(kitty)$, title:^(scratch
 windowrulev2    = float,                        class:^(kitty)$, title:^(scratchpad)$
 windowrulev2    = size 50% 50%,                 class:^(kitty)$, title:^(scratchpad)$
 windowrulev2    = center,                       class:^(kitty)$, title:^(scratchpad)$
-
-# App launching
-bind = Super,                   Space,          exec, wofi --show drun
-bind = Super,                   Return,         exec, kitty
-bind = Super,                   B,              exec, firefox
-bind = Super,                   mouse:275,      exec, firefox
-bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste -n -p)
-# bind = Super,                   E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
-# bind = Super,                   mouse:274,      exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
-# bind = Super+Ctrl,              E,              exec, emacs
-# bind = Super,                   O,              exec, obsidian
-bind = Super+Ctrl,              S,              exec, hyprshot -m window
-bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
