hyprland: add a popup keybindings cheatsheet
I had Claude use my hyprland.conf to generate an HTML cheatsheet of my
Hyprland keybindings. Super+/ pops up a Firefox window displaying it.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -223,6 +223,7 @@ bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-pa
 # bind = Super+Ctrl,              E,              exec, emacs
 bind = Super+Ctrl,              S,              exec, hyprshot -m window
 bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
+bind = Super,                   slash,          exec, firefox ~/.config/hypr/keybindings.html
 
 # Window resizing.
 binde = Super+Ctrl,     A,              resizeactive, -20   0
@@ -234,9 +235,8 @@ bindm = Super,          mouse:273,      resizewindow
 # layout (Dwindle).
 bind = Super,           F,              fullscreen, 0 toggle
 bind = Super+Shift,     Space,          togglefloating
-bind = Super,           mouse:272,      togglefloating
+bind = Super+Shift,     mouse:272,      togglefloating
 bind = Super,           W,              killactive
-bind = Super,           mouse:273,      killactive
 bind = Super,           T,              pseudo,
 bind = Super,           V,              togglesplit,
 bind = Super,           P,              pin
@@ -260,7 +260,14 @@ windowrulev2    = size 800 600, class:.*goldendict_ng$, title:.* - GoldenDict-ng
 # Move a terminal with the class "scratchpad" to the special workspace. The
 # "magic" tag corresponds to the keybinding above.
 windowrulev2    = workspace special:magic,      class:^(kitty)$, title:^(scratchpad)$
-# Resize and float the scratchpad when it appears.
 windowrulev2    = float,                        class:^(kitty)$, title:^(scratchpad)$
 windowrulev2    = size 50% 50%,                 class:^(kitty)$, title:^(scratchpad)$
 windowrulev2    = center,                       class:^(kitty)$, title:^(scratchpad)$
+
+# The Hyprland keybindings cheatsheet.
+# Note that these rules to make the window float don’t currently work. AIUI,
+# this is due to how Firefox sets the window title. Nevertheless, I’ll leave the
+# rules here in case it happens to start working one day.
+windowrulev2    = float,        class:^(firefox)$, title:^(Hyprland Keybindings Reference)
+windowrulev2    = size 60% 80%, class:^(firefox)$, title:^(Hyprland Keybindings Reference)
+windowrulev2    = center,       class:^(firefox)$, title:^(Hyprland Keybindings Reference)
