hyprland: make Firefox bindings open a new window

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -216,14 +216,14 @@ bind = Super+Shift,     U,      movetoworkspace, -1
 # Applications.
 bind = Super,                   Space,          exec, wofi --show drun
 bind = Super,                   Return,         exec, kitty
-bind = Super,                   B,              exec, firefox
+bind = Super,                   B,              exec, firefox --new-window
 bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste --primary --no-newline)
 # bind = Super,                   E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
 # bind = Super,                   mouse:274,      exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
 # bind = Super+Ctrl,              E,              exec, emacs
 bind = Super+Ctrl,              S,              exec, hyprshot -m window
 bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
-bind = Super,                   slash,          exec, firefox ~/.config/hypr/keybindings.html
+bind = Super,                   slash,          exec, firefox --new-window ~/.config/hypr/keybindings.html
 
 # Window resizing.
 binde = Super+Ctrl,     A,              resizeactive, -20   0
