hyprland: add keybind for 1Password Quick Access
Under Hyprland, this has to be done in hyprland.conf. An app can’t
register global keybindings.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -215,6 +215,7 @@ bind = Super+Shift,     U,      movetoworkspace, -1
 
 # Applications.
 bind = Super,                   Space,          exec, wofi --show drun
+bind = Super+Ctrl,              Space,          exec, 1password --quick-access
 bind = Super,                   Return,         exec, kitty
 bind = Super,                   B,              exec, firefox --new-window
 bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste --primary --no-newline)
