hyprland: start emacs in server mode

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = hyprctl setcursor Nordzy-cursors-white 24
 exec-once = systemctl --user start hyprpolkitagent
 
 exec-once = 1password --silent
+exec-once = emacs --daemon
 
 exec-once = gnome-keyring-daemon --start --components=secrets
 
@@ -217,9 +218,7 @@ bind = Super+Ctrl,              Space,          exec, 1password --quick-access
 bind = Super,                   Return,         exec, kitty
 bind = Super,                   B,              exec, firefox --new-window
 bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste --primary --no-newline)
-# bind = Super,                   E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
-# bind = Super,                   mouse:274,      exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
-# bind = Super+Ctrl,              E,              exec, emacs
+bind = Super+Ctrl,              E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
 bind = Super+Ctrl,              S,              exec, hyprshot -m window
 bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
 bind = Super,                   slash,          exec, firefox --new-window ~/.config/hypr/keybindings.html
