hyprland: bind Super+Shift+Escape to quit Hyprland

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -243,6 +243,9 @@ bind = Super,           P,              pin
 bind = Super,           S,      togglespecialworkspace, magic
 bind = Super+Ctrl,      T,      exec, kitty --title scratchpad
 
+# Compositor
+bind = Super+Shift,     Escape, exit
+
 #
 # WINDOW RULES
 #
