kitty: increase font size now scale is back to 1

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,10 +1,9 @@
-font_family             JetBrains Mono
+font_family             JetBrains Mono Medium
 bold_font               JetBrains Mono Bold
 italic_font             JetBrains Mono Italic
 bold_italic_font        JetBrains Mono Bold Italic
 
-font_size               9.0
-adjust_line_height      110%
+font_size               11.5
 
 # Disable ligatures (can blur with astigmatism)
 disable_ligatures       always
@@ -16,7 +15,7 @@ disable_ligatures       always
 cursor_shape            block
 
 # Half the line-height (9 * 110% / 2):
-window_padding_width    5
+window_padding_width    6
 
 # URL handling
 url_color               #268bd2
