hyprland: always split windows right or below

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -113,8 +113,7 @@ animations {
 }
 
 dwindle {
-    pseudotile          = true
-    preserve_split      = true
+    force_split = 2             # to the right or below
 }
 
 master {
@@ -235,8 +234,6 @@ bind = Super,           F,              fullscreen, 0 toggle
 bind = Super+Shift,     Space,          togglefloating
 bind = Super+Shift,     mouse:272,      togglefloating
 bind = Super,           W,              killactive
-bind = Super,           T,              pseudo,
-bind = Super,           V,              togglesplit,
 bind = Super,           P,              pin
 
 # Scratchpad.
