hyprland: add binding for maximising a window

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -230,7 +230,8 @@ binde = Super+Ctrl,     H,              resizeactive,  20   0
 bindm = Super,          mouse:273,      resizewindow
 
 # layout (Dwindle).
-bind = Super,           F,              fullscreen, 0 toggle
+bind = Super,           F,              fullscreen, 1 toggle
+bind = Super+Ctrl,      F,              fullscreen, 0 toggle
 bind = Super+Shift,     Space,          togglefloating
 bind = Super+Shift,     mouse:272,      togglefloating
 bind = Super,           W,              killactive
