hyprpaper: switch to a better wallpaper
I had ChatGPT generate this image.  It assured me it’s well-suited to
the Solarized Light theme.  I think it looks fine so far.

--- a/hyprpaper/.config/hypr/hyprpaper.conf
+++ b/hyprpaper/.config/hypr/hyprpaper.conf
@@ -1,6 +1,2 @@
-# preload = ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/thinkpad.jpg
-# wallpaper = , ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/thinkpad.jpg
-# preload = ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/geom.png
-# wallpaper = , ~/Downloads/solarized-master-wallpapers-solarized/wallpapers-solarized/geom.png
-preload = ~/.config/wallpapers/crow.png
-wallpaper = , ~/.config/wallpapers/crow.png
+preload = ~/.config/wallpapers/wallpaper-solarized.png
+wallpaper = , ~/.config/wallpapers/wallpaper-solarized.png
