hyprland: remove redundant config settings

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -60,7 +60,6 @@ general {
     gaps_in             = 3
     gaps_out            = 6
     border_size         = 2
-    no_focus_fallback   = true
     resize_on_border    = true
     col.active_border   = rgba(93a1a1ff)
     col.inactive_border = rgba(eee8d5ff)
@@ -68,185 +67,114 @@ general {
     layout              = dwindle
 }
 
-decoration {
-    rounding    = 3
+input {
+    kb_options      = compose:menu
+    repeat_rate     = 90
+    repeat_delay    = 300
 
-    blur {
-        enabled = false
-    }
+    accel_profile   = flat
+    scroll_factor   = 0.25
+    natural_scroll  = true
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#group
-group {
-    col.border_locked_active    = -1
-    col.border_locked_inactive  = -1
-
-    groupbar {
-        font_size                       = 12
-        font_family                     = sans-serif
-        font_weight_active              = ultraheavy
-        font_weight_inactive            = normal
-        indicator_height                = 0
-        indicator_gap                   = 5
-        height                          = 22
-        gaps_in                         = 5
-        gaps_out                        = 0
-        gradients                       = true
-        gradient_rounding               = 0
-        gradient_round_only_edges       = false
-    }
-}
-
-animations {
-    enabled     = yes
-
-    # Smooth bezier curves
-    bezier      = myBezier,     0.05, 0.7, 0.1,  1.0
-    bezier      = easeOutQuint, 0.22, 1.0, 0.36, 1.0
-
-    # Increased durations to make animations more noticeable
-    animation   = windows,    0.7, 4, myBezier,     popin
-    animation   = windowsOut, 0.6, 3, default,      popin 80%
-    animation   = border,     0.4, 3, default
-    animation   = fade,       0.4, 3, default
-    animation   = workspaces, 0.8, 3, easeOutQuint, slide
-}
-
-dwindle {
-    force_split = 2             # to the right or below
-}
-
-master {
-    new_status  = master
-}
-
-# https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper             = 0
-    animate_mouse_windowdragging        = true
-    animate_manual_resizes              = true
-    disable_splash_rendering            = true
-    focus_on_activate                   = true
+    force_default_wallpaper         = 0
+    animate_manual_resizes          = true
+    animate_mouse_windowdragging    = true
+    focus_on_activate               = true
 }
 
 cursor {
     hide_on_key_press   = true
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#input
-input {
-    kb_layout           = us
-    kb_variant          =
-    kb_model            =
-    kb_options          = compose:menu
-    kb_rules            =
-
-    repeat_delay        = 300
-    repeat_rate         = 90
-    follow_mouse        = 1
-
-    touchpad {
-        natural_scroll  = false
-    }
+dwindle {
+    force_split = 2             # to the right or below
 }
-
-device {
-    name                = kensington-slimblade-pro-trackball(wired)-kensington-slimblade-pro-trackball(wired)
-    accel_profile       = flat
-    scroll_factor       = 0.25
-
-    # Button layout:
-    # Top left:     BTN_MIDDLE (274)
-    # Top right:    BTN_SIDE (275)
-    # Bottom left:  BTN_LEFT (272)
-    # Bottom right: BTN_RIGHT (273)
-}
-
-# See https://wiki.hypr.land/Configuring/Gestures
-gesture         = 3, horizontal, workspace
 
 #
 # KEYBINDINGS
 #
 
 # Window focus.
-bind = Super,   A,      movefocus, l
-bind = Super,   E,      movefocus, u
-bind = Super,   I,      movefocus, d
-bind = Super,   H,      movefocus, r
+bind = Super,   A,  movefocus, l
+bind = Super,   E,  movefocus, u
+bind = Super,   I,  movefocus, d
+bind = Super,   H,  movefocus, r
 
 # Workspaces.
-bind = Super,   1,              workspace,  1
-bind = Super,   2,              workspace,  2
-bind = Super,   3,              workspace,  3
-bind = Super,   4,              workspace,  4
-bind = Super,   5,              workspace,  5
-bind = Super,   6,              workspace,  6
-bind = Super,   7,              workspace,  7
-bind = Super,   8,              workspace,  8
-bind = Super,   9,              workspace,  9
-bind = Super,   K,              workspace, +1
-bind = Super,   U,              workspace, -1
-bind = Super,   Tab,            workspace, previous
-bind = Super,   mouse_up,       workspace, +1
-bind = Super,   mouse_down,     workspace, -1
+bind = Super,   1,          workspace,  1
+bind = Super,   2,          workspace,  2
+bind = Super,   3,          workspace,  3
+bind = Super,   4,          workspace,  4
+bind = Super,   5,          workspace,  5
+bind = Super,   6,          workspace,  6
+bind = Super,   7,          workspace,  7
+bind = Super,   8,          workspace,  8
+bind = Super,   9,          workspace,  9
+bind = Super,   K,          workspace, +1
+bind = Super,   U,          workspace, -1
+bind = Super,   Tab,        workspace, previous
+bind = Super,   mouse_up,   workspace, +1
+bind = Super,   mouse_down, workspace, -1
 
 # Window movement.
-bind    = Super+Shift,  A,              swapwindow, l
-bind    = Super+Shift,  E,              swapwindow, u
-bind    = Super+Shift,  I,              swapwindow, d
-bind    = Super+Shift,  H,              swapwindow, r
-bindm   = Super,        mouse:272,      movewindow
+bind    = Super+Shift,  A,          swapwindow, l
+bind    = Super+Shift,  E,          swapwindow, u
+bind    = Super+Shift,  I,          swapwindow, d
+bind    = Super+Shift,  H,          swapwindow, r
+bindm   = Super,        mouse:272,  movewindow
 
 # Move to workspace.
-bind = Super+Shift,     1,      movetoworkspace,  1
-bind = Super+Shift,     2,      movetoworkspace,  2
-bind = Super+Shift,     3,      movetoworkspace,  3
-bind = Super+Shift,     4,      movetoworkspace,  4
-bind = Super+Shift,     5,      movetoworkspace,  5
-bind = Super+Shift,     6,      movetoworkspace,  6
-bind = Super+Shift,     7,      movetoworkspace,  7
-bind = Super+Shift,     8,      movetoworkspace,  8
-bind = Super+Shift,     9,      movetoworkspace,  9
-bind = Super+Shift,     K,      movetoworkspace, +1
-bind = Super+Shift,     U,      movetoworkspace, -1
+bind = Super+Shift,     1,  movetoworkspace,  1
+bind = Super+Shift,     2,  movetoworkspace,  2
+bind = Super+Shift,     3,  movetoworkspace,  3
+bind = Super+Shift,     4,  movetoworkspace,  4
+bind = Super+Shift,     5,  movetoworkspace,  5
+bind = Super+Shift,     6,  movetoworkspace,  6
+bind = Super+Shift,     7,  movetoworkspace,  7
+bind = Super+Shift,     8,  movetoworkspace,  8
+bind = Super+Shift,     9,  movetoworkspace,  9
+bind = Super+Shift,     K,  movetoworkspace, +1
+bind = Super+Shift,     U,  movetoworkspace, -1
 
 # Applications.
-bind = Super,                   Space,          exec, wofi --show drun
-bind = Super+Ctrl,              Space,          exec, 1password --quick-access
-bind = Super,                   Return,         exec, kitty
-bind = Super,                   B,              exec, firefox --new-window
-bind = Super+Ctrl,              D,              exec, goldendict --popup $(wl-paste --primary --no-newline)
-bind = Super+Ctrl,              E,              exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
-bind = Super+Ctrl,              S,              exec, hyprshot -m window
-bind = Super+Ctrl+Shift,        S,              exec, hyprshot -m region
-bind = Super,                   slash,          exec, firefox --new-window ~/.config/hypr/keybindings.html
+bind = Super,               Space,      exec, wofi --show drun
+bind = Super+Ctrl,          Space,      exec, 1password --quick-access
+bind = Super,               Return,     exec, kitty
+bind = Super,               B,          exec, firefox --new-window
+bind = Super+Ctrl,          D,          exec, goldendict --popup $(wl-paste --primary --no-newline)
+bind = Super+Ctrl,          E,          exec, emacsclient --create-frame --no-wait --alternate-editor='' --quiet
+bind = Super+Ctrl,          S,          exec, hyprshot -m window
+bind = Super+Ctrl+Shift,    S,          exec, hyprshot -m region
+bind = Super,               slash,      exec, firefox --new-window ~/.config/hypr/keybindings.html
 
 # Window resizing.
-binde = Super+Ctrl,     A,              resizeactive, -20   0
-binde = Super+Ctrl,     E,              resizeactive,   0 -20
-binde = Super+Ctrl,     I,              resizeactive,   0  20
-binde = Super+Ctrl,     H,              resizeactive,  20   0
-bindm = Super,          mouse:273,      resizewindow
+binde = Super+Ctrl,         A,          resizeactive, -20   0
+binde = Super+Ctrl,         E,          resizeactive,   0 -20
+binde = Super+Ctrl,         I,          resizeactive,   0  20
+binde = Super+Ctrl,         H,          resizeactive,  20   0
+bindm = Super,              mouse:273,  resizewindow
 
 # layout (Dwindle).
-bind = Super,           F,              fullscreen, 1 toggle
-bind = Super+Ctrl,      F,              fullscreen, 0 toggle
-bind = Super+Shift,     Space,          togglefloating
-bind = Super+Shift,     mouse:272,      togglefloating
-bind = Super,           W,              killactive
-bind = Super,           P,              pin
+bind = Super,               F,          fullscreen, 1 toggle
+bind = Super+Ctrl,          F,          fullscreen, 0 toggle
+bind = Super+Shift,         Space,      togglefloating
+bind = Super+Shift,         mouse:272,  togglefloating
+bind = Super,               W,          killactive
+bind = Super,               P,          pin
 
 # Scratchpad.
-bind = Super,           S,      togglespecialworkspace, magic
-bind = Super+Ctrl,      T,      exec, kitty --title scratchpad
+bind = Super,               S,          togglespecialworkspace, magic
+bind = Super+Ctrl,          T,          exec, kitty --title scratchpad
 
 # Compositor
-bind = Super+Shift,     Escape, exit
+bind = Super+Shift,         Escape,     exit
 
 #
 # WINDOW RULES
 #
+
 windowrulev2    = suppressevent maximize, class:.*
 
 windowrulev2    = workspace 3, class:^(obsidian)$
