waybar: move time to front of date-time display

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -37,7 +37,7 @@
   },
 
   "clock": {
-    "format": "{:%A %d %B  %H:%M}",
+    "format": "{:%H:%M  %A %d %B}",
     "tooltip-format": "<tt><small>{calendar}</small></tt>",
     "calendar": {
       "mode": "month",
