hyprland: switch to the Adwaita theme

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -4,6 +4,7 @@
 #         name, resolution, position, scale
 monitor = DP-1, 2560x1440@120Hz, auto, 1
 
+exec-once = hyprctl setcursor Adwaita 24
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = hypridle
@@ -12,7 +13,6 @@ exec-once = wlsunset -l -35.3 -L 149.1 -t 3700 -T 5500
 exec-once = swaync
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
-exec-once = hyprctl setcursor Nordzy-cursors-white 24
 
 # From instructions at https://wiki.hypr.land/Hypr-Ecosystem/hyprpolkitagent/
 exec-once = systemctl --user start hyprpolkitagent
@@ -30,10 +30,6 @@ env = GOLDENDICT_FORCE_WAYLAND, 1
 # Launch a terminal on the scratchpad.
 exec-once = kitty --title scratchpad
 
-env = XCURSOR_THEME,            Nordzy-cursors-white
-env = XCURSOR_SIZE,             24
-env = HYPRCURSOR_THEME,         Nordzy-cursors-white
-env = HYPRCURSOR_SIZE,          24
 env = QT_QPA_PLATFORMTHEME,     qt6ct
 
 # Force all apps to use Wayland
